--- a/c-api/sequence.po
+++ b/c-api/sequence.po
@@ -17,10 +17,10 @@ msgstr ""
 "Last-Translator: Jones Martins, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -47,8 +47,8 @@ msgid ""
 "Returns the number of objects in sequence *o* on success, and ``-1`` on "
 "failure.  This is equivalent to the Python expression ``len(o)``."
 msgstr ""
-"Retorna o número de objetos em sequência *o* em caso de sucesso e ``-1`` em "
-"caso de falha. Isso é equivalente à expressão Python ``len(o)``."
+"Retorna o número de objetos na sequência *o* em caso de sucesso, ou ``-1`` "
+"em caso de falha. Equivale à expressão Python ``len(o)``."
 
 #: ../../c-api/sequence.rst:29
 msgid ""
@@ -56,7 +56,7 @@ msgid ""
 "failure. This is the equivalent of the Python expression ``o1 + o2``."
 msgstr ""
 "Retorna a concatenação de *o1* e *o2* em caso de sucesso, e ``NULL`` em caso "
-"de falha. Este é o equivalente da expressão Python ``o1 + o2``."
+"de falha. Equivale à expressão Python ``o1 + o2``."
 
 #: ../../c-api/sequence.rst:35
 msgid ""
@@ -65,8 +65,7 @@ msgid ""
 "count``."
 msgstr ""
 "Retorna o resultado da repetição do objeto sequência *o* *count* vezes ou "
-"``NULL`` em caso de falha. Este é o equivalente da expressão Python ``o * "
-"count``."
+"``NULL`` em caso de falha. Equivale à expressão Python ``o * count``."
 
 #: ../../c-api/sequence.rst:41
 msgid ""
@@ -75,8 +74,8 @@ msgid ""
 "the equivalent of the Python expression ``o1 += o2``."
 msgstr ""
 "Retorna a concatenação de *o1* e *o2* em caso de sucesso, e ``NULL`` em caso "
-"de falha. A operação é feita *no local* quando *o1* suportar. Este é o "
-"equivalente da expressão Python ``o1 += o2``."
+"de falha. A operação é feita *localmente* se *o1* permitir. Equivale à "
+"expressão Python ``o1 += o2``."
 
 #: ../../c-api/sequence.rst:48
 msgid ""
@@ -85,16 +84,16 @@ msgid ""
 "it.  This is the equivalent of the Python expression ``o *= count``."
 msgstr ""
 "Retorna o resultado da repetição do objeto sequência *o* *count* vezes ou "
-"``NULL`` em caso de falha. A operação é feita *localmente* quando *o* "
-"suportar. Este é o equivalente da expressão Python ``o *= count``."
+"``NULL`` em caso de falha. A operação é feita *localmente* se *o* permitir. "
+"Equivale à expressão Python ``o *= count``."
 
 #: ../../c-api/sequence.rst:55
 msgid ""
 "Return the *i*\\ th element of *o*, or ``NULL`` on failure. This is the "
 "equivalent of the Python expression ``o[i]``."
 msgstr ""
-"Retorna o elemento *i* de *o* ou ``NULL`` em caso de falha. Este é o "
-"equivalente da expressão Python ``o[i]``."
+"Retorna o elemento *i* de *o* ou ``NULL`` em caso de falha. Equivale à "
+"expressão Python ``o[i]``."
 
 #: ../../c-api/sequence.rst:61
 msgid ""
@@ -102,7 +101,7 @@ msgid ""
 "on failure. This is the equivalent of the Python expression ``o[i1:i2]``."
 msgstr ""
 "Retorna a fatia do objeto sequência *o* entre *i1* e *i2*, ou ``NULL`` em "
-"caso de falha. Este é o equivalente da expressão Python ``o[i1:i2]``."
+"caso de falha. Equivale à expressão Python ``o[i1:i2]``."
 
 #: ../../c-api/sequence.rst:67
 msgid ""
@@ -112,9 +111,8 @@ msgid ""
 "reference to *v*."
 msgstr ""
 "Atribui o objeto *v* ao elemento *i* de *o*. Levanta uma exceção e retorna "
-"``-1`` em caso de falha; retorna ``0`` em caso de sucesso. Isso é "
-"equivalente à instrução Python ``o[i]=v``. Esta função *não* rouba uma "
-"referência a *v*."
+"``-1`` em caso de falha; retorna ``0`` em caso de sucesso. Esta função *não* "
+"rouba uma referência a *v*. Equivale à instrução Python ``o[i]=v``."
 
 #: ../../c-api/sequence.rst:72
 msgid ""
@@ -129,8 +127,8 @@ msgid ""
 "Delete the *i*\\ th element of object *o*.  Returns ``-1`` on failure.  This "
 "is the equivalent of the Python statement ``del o[i]``."
 msgstr ""
-"Exclui o elemento *i* do objeto *o*. Retorna ``-1`` em caso de falha. Isso é "
-"equivalente à instrução Python ``del o[i]``."
+"Exclui o elemento *i* do objeto *o*. Retorna ``-1`` em caso de falha. "
+"Equivale à instrução Python ``del o[i]``."
 
 #: ../../c-api/sequence.rst:84
 msgid ""
@@ -138,7 +136,7 @@ msgid ""
 "to *i2*.  This is the equivalent of the Python statement ``o[i1:i2] = v``."
 msgstr ""
 "Atribui o objeto sequência *v* à fatia no objeto sequência *o* de *i1* a "
-"*i2*. Isso é equivalente à instrução Python ``o[i1:i2] = v``."
+"*i2*. Equivale à instrução Python ``o[i1:i2] = v``."
 
 #: ../../c-api/sequence.rst:90
 msgid ""
@@ -146,7 +144,7 @@ msgid ""
 "on failure.  This is the equivalent of the Python statement ``del o[i1:i2]``."
 msgstr ""
 "Exclui a fatia no objeto sequência *o* de *i1* a *i2*. Retorna ``-1`` em "
-"caso de falha. Isso é equivalente à instrução Python ``del o[i1:i2]``."
+"caso de falha. Equivale à instrução Python ``del o[i1:i2]``."
 
 #: ../../c-api/sequence.rst:96
 msgid ""
@@ -156,7 +154,7 @@ msgid ""
 msgstr ""
 "Retorna a quantidade de ocorrências de *value* em *o*, isto é, retorna a "
 "quantidade de chaves onde ``o[key] == value``. Em caso de falha, retorna "
-"``-1``. Isso equivale à expressão Python ``o.count(value)``."
+"``-1``. Equivale à expressão Python ``o.count(value)``."
 
 #: ../../c-api/sequence.rst:103
 msgid ""
@@ -165,8 +163,8 @@ msgid ""
 "equivalent to the Python expression ``value in o``."
 msgstr ""
 "Determina se *o* contém *value*. Se um item em *o* for igual a *value*, "
-"retorna ``1``, senão, retorna ``0``. Em caso de erro, retorna ``-1``. Isso "
-"equivale à expressão Python ``value in o``."
+"retorna ``1``, senão, retorna ``0``. Em caso de erro, retorna ``-1``. "
+"Equivale à expressão Python ``value in o``."
 
 #: ../../c-api/sequence.rst:110
 msgid ""
@@ -174,7 +172,7 @@ msgid ""
 "``-1``.    This is equivalent to the Python expression ``o.index(value)``."
 msgstr ""
 "Retorna o primeiro índice *i* tal que ``o[i] == value``. Em caso de erro, "
-"retorna ``-1``. Isso equivale à expressão Python ``o.index(value)``."
+"retorna ``-1``. Equivale à expressão Python ``o.index(value)``."
 
 #: ../../c-api/sequence.rst:116
 msgid ""
@@ -184,7 +182,7 @@ msgid ""
 msgstr ""
 "Retorna um objeto lista com o mesmo conteúdo da sequência ou iterável *o*, "
 "ou ``NULL`` em caso de falha. Garante-se que a lista retornada será nova. "
-"Isso equivale à expressão Python ``list(o)``."
+"Equivale à expressão Python ``list(o)``."
 
 #: ../../c-api/sequence.rst:125
 msgid ""
@@ -194,9 +192,9 @@ msgid ""
 "contents.  This is equivalent to the Python expression ``tuple(o)``."
 msgstr ""
 "Retorna o objeto tupla com o mesmo conteúdo da sequência ou iterável *o*, ou "
-"``NULL``em caso de falha. Se *o* for uma tupla, retorna uma nova referência. "
-"Senão, uma tupla será construída com o conteúdo apropriado. Isso equivale à "
-"expressão Python ``tuple(o)``."
+"``NULL`` em caso de falha. Se *o* for uma tupla, retorna uma nova "
+"referência. Senão, uma tupla será construída com o conteúdo apropriado. "
+"Equivale à expressão Python ``tuple(o)``."
 
 #: ../../c-api/sequence.rst:133
 msgid ""
@@ -208,7 +206,7 @@ msgstr ""
 "Retorna a sequência ou iterável *o* como um objeto usável por outras funções "
 "da família ``PySequence_Fast*``. Se o objeto não for uma sequência ou "
 "iterável, levanta :exc:`TypeError` com *m* sendo o texto da mensagem. "
-"Retorna ``NULL`` em caso de falha. "
+"Retorna ``NULL`` em caso de falha."
 
 #: ../../c-api/sequence.rst:138
 msgid ""
@@ -216,9 +214,9 @@ msgid ""
 "a :c:type:`PyTupleObject` or a :c:type:`PyListObject` and access the data "
 "fields of *o* directly."
 msgstr ""
-"As funções ``PySequence_Fast*`` têm esse nome porque supõem que *o* é um :c:"
-"type:`PyTupleObject` ou um :c:type:`PyListObject` e porque acessam os campos "
-"de dados de *o* diretamente."
+"As funções ``PySequence_Fast*`` têm esse nome porque presumem que *o* é um :"
+"c:type:`PyTupleObject` ou um :c:type:`PyListObject` e porque acessam os "
+"campos de dados de *o* diretamente."
 
 #: ../../c-api/sequence.rst:142
 msgid ""
@@ -243,8 +241,7 @@ msgid ""
 "func:`PySequence_Fast`, *o* is not ``NULL``, and that *i* is within bounds."
 msgstr ""
 "Retorna o elemento *i* de *o*, presumindo que *o* foi retornado por :c:func:"
-"`PySequence_Fast`, que *o* não seja ``NULL``, e que *i* esteja dentro dos "
-"limites."
+"`PySequence_Fast`, que *o* seja ``NULL``, e que *i* esteja nos limites."
 
 #: ../../c-api/sequence.rst:163
 msgid ""
@@ -252,7 +249,7 @@ msgid ""
 "returned by :c:func:`PySequence_Fast` and *o* is not ``NULL``."
 msgstr ""
 "Retorna o vetor subjacente de ponteiros PyObject. Presume que *o* foi "
-"retornado por :c:func:`PySequence_Fast` e *o* não é ``NULL``."
+"retornado por :c:func:`PySequence_Fast` e que *o* não seja ``NULL``."
 
 #: ../../c-api/sequence.rst:166
 msgid ""
